--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h4><i class="bi bi-check-square-fill" style="color: #64d277; margin-right: 15px;"></i> Free</h4>
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  Rent or Buy</h4>
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  Subscription</h4>
-            <hr style="width: 100px; margin: 20px 40px; ">
+            <hr class="hr1" style="width: 100px; margin: 20px 40px; ">
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  yidio</h4>
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  Apple TV+</h4>
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  BET+</h4>
@@ -53,7 +53,7 @@
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  FixFling</h4>
 
         </div>
-        <div class="films" style="margin-left: 250px;">
+        <div class="films" >
             <h1>Watch Free Kids & Family Movies Online</h1>
 
         <div class="col">
