--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
         </div>
         <div class="col">
             <img src="dungeons-dragons-honor-among-thieves-1630854999.jpg" alt="">
-            <p>dungeons dragon</p>
+            <h6 class="two">dungeons dragon</h6>
         </div>
         <div class="col">
             <img src="evil-dead-rise-1630855095.jpg" alt="">
-            <p>evil-dead-rise</p>
+            <h6 class="two">evil dead rise<h6>
         </div>
         <div class="col">
             <img src="fast-x-1630855180.jpg" alt="">
