--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
         <div class="container">
             <nav>
                 <h2 style="display:inline-block; margin-right: 20px; color: #f5a62c; font-family: 'Cherry Bomb One', cursive; letter-spacing: 4px; font-size:30px ;">Yidio</h2>
-                <div id="one">
-                <input type="search" name="search" class="search" placeholder="what do you want to watch?" " style="width: 250px; border: 1px solid rgb(255, 255, 255) ; border-radius: 20px;padding: 5px;">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-                <a href="#" style="text-decoration: none; color: white; margin: 0 20px; font-family: 'Roboto Condensed', sans-serif;">TV SHOWS</a>
-                <a href="#" style="text-decoration: none; color: #f5a62c; margin: 0 20px; font-family: 'Roboto Condensed', sans-serif;"> MOVIES</a>
+                <div class="icon"><i class="fa-solid fa-bars"></i></div>
+                <div class="him">
+                    <div id="one">
+                        <input type="search" name="search" class="search" placeholder="what do you want to watch?" " style="width: 250px; border: 1px solid rgb(255, 255, 255) ; border-radius: 20px;padding: 5px;">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <a href="#" class="links" style="text-decoration: none; color: white; margin: 0 20px; font-family: 'Roboto Condensed', sans-serif;">TV SHOWS</a>
+                    <a href="#" class="inks" style="text-decoration: none; color: #f5a62c; margin: 0 20px; font-family: 'Roboto Condensed', sans-serif;"> MOVIES</a>
+                </div>
             </nav>
+                
         </div>
 
         
