--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
             <h4><i class="bi bi-square" style="margin-right: 15px;"></i>  FixFling</h4>
 
         </div>
+           <div class="things">
+            <div class="thing">
+                <h2>sourue</h2>
+                <p>free</p>
+            </div> 
+            <div class="thin">
+                <h2>sourue</h2>
+                <p>free</p>
+            </div>
+            
+        </div>                                                         
+                                                                   
         <div class="films" >
             <h1>Watch Free Kids & Family Movies Online</h1>
 
